package pt.isep.psoft.aisafe.application.DTO;

public record RealTimeStatusDTO(
        String registrationNumber,
        String realTimeStatus
) {}